--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,27 @@
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>{% block title %}Currency Follow App{% endblock %}</title>
-</head>
-<body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+      <style>
+          body {padding-left: 15px;}
+          th, td {padding: 15px; text-align: left;}
+          table, td, th {border: 1px solid #ddd; text-align: left;}
+          table {border-collapse: collapse;width: 100%;}
+      </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>CurrencyApp</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-8">
+          <h1 class="mt-2">CurrencyApp</h1>
+          <hr class="mt-0 mb-4">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
