--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}Login{% endblock %}
 
 {% block content %}
 <h2>Login</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+    {% for field in form %}
+      <p>
+        {{ field|as_crispy_field }}
+      </p>
+    {% endfor %}
   <button type="submit">Login</button>
 </form>
+
+<p>
+    Don't have an account? <a href={% url 'signup' %}>Sign up</a>
+</p>
 {% endblock %}
